syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.popi.common.grpc.auth";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc DeleteRefreshToken (RefreshTokenDeleteRequest) returns (google.protobuf.Empty);
}

message RefreshTokenDeleteRequest {
  string memberId = 1;
}